# mosk_git_gui

./: .gitignore  CMakeLists.txt  license  mosk_git_gui.fbp
cmake/: FindFormBuilder.cmake
src/: main.cpp
src/core/: command.cpp  command.h  core.cpp  core.h  logger.cpp  logger.h
src/view/: view.h
src/view/wx/: wx_main_frame.cpp  wx_main_frame.h  wx_view.cpp  wx_view.h
